# contract_type_clf

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/CUAD_data/: translated_data.csv  translated_data2.csv
dev/: PDF.ipynb  Parsing and creating DataSet.ipynb  baseline.ipynb  cuad_classic_models.ipynb  cuad_translation.ipynb  data_preprocessing.ipynb  model_wrapper.py  Ключевые слова.rar
dev/.ipynb_checkpoints/: PDF-checkpoint.ipynb  Parsing and creating DataSet-checkpoint.ipynb  baseline-checkpoint.ipynb  cuad_translation-checkpoint.ipynb  data_preprocessing-checkpoint.ipynb
models/CUAD/: CUAD_baseline_RF_14_01.pkl  CUAD_baseline_RF_14_12.pkl
webAppLushKo/: db.sqlite3  manage.py
webAppLushKo/main/: views.py
webAppLushKo/main/static/main/css/: main.css
webAppLushKo/main/templates/main/: about.html  index.html  layout.html  test.html
webAppLushKo/predicter/: forms.py  models.py  urls.py  views.py
webAppLushKo/predicter/migrations/: 0001_initial.py
webAppLushKo/predicter/templates/predicter/: all_doc.html  details.html  details_html.html  details_origin.html  details_pdf.html  predicter_home.html
webAppLushKo/webAppLushKo/: asgi.py  settings.py  urls.py  wsgi.py
