[tool.poetry]
name = "contract-type-clf"
version = "0.1.0"
description = ""
authors = ["Lush-Ko"]
readme = "README.md"
packages = [{include = "contract_type_clf"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
tqdm = "^4.64.1"
numpy = "^1.23.5"
scikit-learn = "^1.1.3"
jupyter = "^1.0.0"
googletrans = "3.1.0a0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
